...
    tracker: async () => {
      await analytics.logContinueSetPassword()
    },
  },
  {
    name: PreValidationSignupStep.Birthday,
    headerTitle: 'Date de naissance',
    Component: SetBirthday,
    tracker: async () => {
      await analytics.logContinueSetBirthday()
    },
  },
  {
    name: PreValidationSignupStep.CGU,
    headerTitle: 'CGU & Données',
    Component: AcceptCgu,
    tracker: async () => {
      await analytics.logContinueCGU()
    },
  },
]
...
