...
  onSubmit,
  onForgottenPassword,
  isLoginButtonDisabled,
}: LoginFormProps) => (
  <React.Fragment>
    <TitleContainer>
      <Typo.Title3 {...setTextSemantic('h2')}>Connecte-toi</Typo.Title3>
    </TitleContainer>
    <Form.MaxWidth>
      <InputError
        visible={!!errorMessage}
        errorMessage={errorMessage}
        numberOfSpacesTop={5}
...
