...
            <Typo.Body>
              Saisis ton adresse e-mail pour recevoir un lien qui te permettra de réinitialiser ton
              mot de passe&nbsp;!
            </Typo.Body>
          </Container>
          <Form.MaxWidth>
            <EmailInputController label="Adresse e-mail" control={control} name="email" />
            <ButtonContainer>
              <Button
                wording="Valider"
                onPress={isRecaptchaEnabled ? openReCaptchaChallenge : requestPasswordReset}
                isLoading={isDoingReCaptchaChallenge || isFetching || areSettingsLoading}
                disabled={shouldDisableValidateButton}
              />
            </ButtonContainer>
          </Form.MaxWidth>
...
