import { yupResolver } from '@hookform/resolvers/yup'
import { useNavigation, useRoute } from '@react-navigation/native'
import React, { FunctionComponent, memo, useCallback, useEffect, useState } from 'react'
import { useForm } from 'react-hook-form'
import { Keyboard } from 'react-native'
import styled from 'styled-components/native'

import { getSSOErrorMessage } from 'features/auth/helpers/getSSOErrorMessage'
import { loginSchema } from 'features/auth/pages/login/schema/loginSchema'
import { useSignInMutation } from 'features/auth/queries/useSignInMutation'
import { SignInResponseFailure } from 'features/auth/types'
import {
  StepperOrigin,
  UseNavigationType,
  UseRouteType,
} from 'features/navigation/navigators/RootNavigator/types'
import { analytics } from 'libs/analytics/provider'
import { useSafeState } from 'libs/hooks'
import { captureMonitoringError } from 'libs/monitoring/errors'
import { ReCaptchaError, ReCaptchaInternalError } from 'libs/recaptcha/errors'
import { ReCaptcha } from 'libs/recaptcha/ReCaptcha'
import { ScreenPerformance } from 'performance/ScreenPerformance'
import { useMeasureScreenPerformanceWhenVisible } from 'performance/useMeasureScreenPerformanceWhenVisible'
import { useIsRecaptchaEnabled } from 'queries/settings/useSettings'
import { EmailInputController } from 'shared/forms/controllers/EmailInputController'
import { PasswordInputController } from 'shared/forms/controllers/PasswordInputController'
import { Form } from 'ui/components/Form'
import { SUGGESTION_DELAY_IN_MS } from 'ui/components/inputs/EmailInputWithSpellingHelp/useEmailSpellingHelp'
import { InputError } from 'ui/components/inputs/InputError'
import { ExternalTouchableLink } from 'ui/components/touchableLink/ExternalTouchableLink'
import { Button } from 'ui/designSystem/Button/Button'
import { showErrorSnackBar } from 'ui/designSystem/Snackbar/snackBar.store'
import { PageWithHeader } from 'ui/pages/PageWithHeader'
import { ExternalSiteFilled } from 'ui/svg/icons/ExternalSiteFilled'
import { Key } from 'ui/svg/icons/Key'
import { Typo } from 'ui/theme'
import { setTextSemantic } from 'ui/theme/typographyAttrs/setTextSemantic'

type LoginFormData = { email: string; password: string }
type Props = { doNotNavigateOnSigninSuccess?: boolean }

export const Login: FunctionComponent<Props> = memo(function Login(props) {
  useMeasureScreenPerformanceWhenVisible(ScreenPerformance.LOGIN)
  const { data: isRecaptchaEnabled } = useIsRecaptchaEnabled()
  const { params } = useRoute<UseRouteType<'Login'>>()
  const { navigate } = useNavigation<UseNavigationType>()
  const [isDoingReCaptchaChallenge, setIsDoingReCaptchaChallenge] = useState(false)

  const {
    handleSubmit,
    control,
    setFocus,
    setError: setFormErrors,
    formState: { isValid },
    getValues,
  } = useForm<LoginFormData>({
    mode: 'all',
    resolver: yupResolver(loginSchema),
    defaultValues: { email: '', password: '' },
    delayError: SUGGESTION_DELAY_IN_MS,
  })

  const [errorMessage, setErrorMessage] = useSafeState<string | null>(null)

  useEffect(() => {
    if (params?.from) void analytics.logStepperDisplayed(params.from, 'Login')
  }, [params?.from])

  useEffect(() => {
    if (params?.displayForcedLoginHelpMessage) {
      showErrorSnackBar(
        'Pour sécuriser ton pass Culture, tu dois régulièrement confirmer tes identifiants.'
      )
      void analytics.logDisplayForcedLoginHelpMessage()
    }
  }, [params?.displayForcedLoginHelpMessage])

  const handleSigninFailure = useCallback(
    (response: SignInResponseFailure) => {
      const failureCode = response.content?.code
      setFocus('email')
      if (failureCode === 'SSO_EMAIL_NOT_FOUND') {
        navigate('SignupMethods', {
          accountCreationToken: response.content?.accountCreationToken,
          email: response.content?.email,
          from: StepperOrigin.LOGIN,
          ssoProvider: response.provider,
        })
      } else if (failureCode === 'SSO_ERROR') {
        showErrorSnackBar(getSSOErrorMessage({ provider: response.provider, context: 'login' }))
      } else if (failureCode === 'EMAIL_NOT_VALIDATED') {
        const email = getValues('email')?.trim()
        if (!email) {
          setErrorMessage('Impossible de recuperer ton adresse e-mail. Reessaie.')
          return
        }
        navigate('SignupConfirmationEmailSent', { email })
      } else if (failureCode === 'ACCOUNT_DELETED') {
        setFormErrors('email', { message: 'Cette adresse e-mail est liée à un compte supprimé' })
      } else if (failureCode === 'NETWORK_REQUEST_FAILED') {
        setErrorMessage('Erreur réseau. Tu peux réessayer une fois la connexion réétablie')
      } else if (response.statusCode === 429 || failureCode === 'TOO_MANY_ATTEMPTS') {
        setErrorMessage('Nombre de tentatives dépassé. Réessaye dans 1 minute')
      } else {
        setErrorMessage('E-mail ou mot de passe incorrect')
      }
    },
    [getValues, navigate, setErrorMessage, setFocus, setFormErrors]
  )

  const { mutate: signIn, isPending } = useSignInMutation({
    doNotNavigateOnSigninSuccess: props.doNotNavigateOnSigninSuccess,
    params,
    setErrorMessage,
    onFailure: handleSigninFailure,
  })

  const shouldDisableLoginButton = !isValid || isPending || isDoingReCaptchaChallenge

  const openReCaptchaChallenge = useCallback(() => {
    setIsDoingReCaptchaChallenge(true)
    setErrorMessage(null)
  }, [setErrorMessage])

  const onReCaptchaClose = useCallback(() => {
    setIsDoingReCaptchaChallenge(false)
  }, [])

  const onReCaptchaError = useCallback(
    (errorCode: ReCaptchaError, error?: string | undefined) => {
      setIsDoingReCaptchaChallenge(false)
      if (errorCode === ReCaptchaInternalError.NetworkError) {
        setErrorMessage(
          'Un problème est survenu, vérifie ta connexion internet avant de rééssayer.'
        )
      } else {
        setErrorMessage('Un problème est survenu, réessaie plus tard.')
        captureMonitoringError(`${errorCode} ${error ?? 'EMPTY_ERROR'}`, 'LoginOnRecaptchaError')
      }
    },
    [setErrorMessage]
  )

  const onReCaptchaExpire = useCallback(() => {
    setIsDoingReCaptchaChallenge(false)
    setErrorMessage('Le token reCAPTCHA a expiré, tu peux réessayer.')
  }, [setErrorMessage])

  const onReCaptchaSuccess = useCallback(
    (token: string) => {
      setIsDoingReCaptchaChallenge(false)
      handleSubmit((data) => signIn({ identifier: data.email, password: data.password, token }))()
    },
    [handleSubmit, signIn]
  )

  const onSubmit = useCallback(
    async (data: LoginFormData) => {
      if (!shouldDisableLoginButton) {
        setErrorMessage('')
        Keyboard.dismiss()
        isRecaptchaEnabled
          ? openReCaptchaChallenge()
          : signIn({ identifier: data.email, password: data.password })
      }
    },
    [shouldDisableLoginButton, isRecaptchaEnabled, setErrorMessage, openReCaptchaChallenge, signIn]
  )

  const onForgottenPasswordClick = useCallback(() => {
    navigate('ForgottenPassword')
  }, [navigate])

  return (
    <React.Fragment>
      {isRecaptchaEnabled ? (
        <ReCaptcha
          onClose={onReCaptchaClose}
          onError={onReCaptchaError}
          onExpire={onReCaptchaExpire}
          onSuccess={onReCaptchaSuccess}
          isVisible={isDoingReCaptchaChallenge}
        />
      ) : null}
      <PageWithHeader
        shouldLimitWidth
        shouldDisplayBackButton
        title="Connexion"
        scrollChildren={
          <React.Fragment>
            <TitleContainer>
              <Typo.Title3 {...setTextSemantic('h2')}>Connecte-toi</Typo.Title3>
            </TitleContainer>
            <Form.MaxWidth>
              <InputError
                visible={!!errorMessage}
                errorMessage={errorMessage}
                numberOfSpacesTop={5}
                accessibilityElementsHidden={false}
                centered
              />
              <EmailInputController
                label="Adresse e-mail"
                name="email"
                control={control}
                requiredIndicator="explicit"
              />
              <ButtonContainer>
                <ExternalTouchableLink
                  as={Button}
                  variant="tertiary"
                  color="neutral"
                  icon={StyledExternalSiteFilled}
                  wording="Identifiants oubliés&nbsp;?"
                  externalNav={{
                    url: 'https://aide.passculture.app/hc/fr/articles/25838501009308--Jeunes-Tu-as-perdu-tes-identifiants-de-connexion-que-faire',
                  }}
                />
              </ButtonContainer>
              <PasswordInputController
                label="Mot de passe"
                name="password"
                control={control}
                autocomplete="current-password"
                onSubmitEditing={handleSubmit(onSubmit)}
                requiredIndicator="explicit"
              />
              <ButtonContainer>
                <Button
                  variant="tertiary"
                  color="neutral"
                  wording="Mot de passe oublié&nbsp;?"
                  onPress={onForgottenPasswordClick}
                  icon={Key}
                />
              </ButtonContainer>
              <Button
                fullWidth
                wording="Se connecter"
                onPress={handleSubmit(onSubmit)}
                disabled={shouldDisableLoginButton}
              />
            </Form.MaxWidth>
          </React.Fragment>
        }
      />
    </React.Fragment>
  )
})

const ButtonContainer = styled.View(({ theme }) => ({
  flexDirection: 'row',
  width: '100%',
  maxWidth: theme.buttons.maxWidth,
  marginTop: theme.designSystem.size.spacing.l,
  marginBottom: theme.designSystem.size.spacing.l,
}))

const TitleContainer = styled.View(({ theme }) => ({
  marginBottom: theme.designSystem.size.spacing.xl,
}))

const StyledExternalSiteFilled = styled(ExternalSiteFilled).attrs(({ theme }) => ({
  size: theme.icons.sizes.smaller,
}))``
