...
      return (
        <InternalTouchableLink
          as={Button}
          variant="secondary"
          color="neutral"
          icon={EmailFilled}
          wording="Continuer avec mon e-mail"
          navigateTo={{ screen: 'Login', params }}
        />
      )

    default:
      return null
...
