...
          onError={onReCaptchaError}
          onExpire={onReCaptchaExpire}
          onSuccess={onReCaptchaSuccess}
          isVisible={isDoingReCaptchaChallenge}
        />
      )}
      <StyledTitle3>CGU & Données</StyledTitle3>
      <Spacer.Column numberOfSpaces={10} />
      <Typo.Body>En cliquant sur “Accepter et s’inscrire”, tu acceptes&nbsp;: </Typo.Body>
      <Spacer.Column numberOfSpaces={2} />
      <ExternalTouchableLink
        as={ButtonTertiaryBlack}
        wording="Nos conditions générales d’utilisation"
        externalNav={{ url: env.CGU_LINK }}
        icon={ExternalSiteFilled}
        justifyContent="flex-start"
        numberOfLines={2}
      />
      <ExternalTouchableLink
...
