appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonMyProfile.yml
- runFlow: reusableFlows/ui/components/buttons/SimpleActionButtonConnect.yml
- tapOn:
        id: "Entrée pour l’email"
- inputText: ${USERNAME_UNKNOWN}
- tapOn:
        id: "Mot de passe"
- inputText: ${PASSWORD}
- tapOn: "Se connecter"
- tapOn: "Se connecter" # pour sortir de la saisie
- assertVisible: "E-mail ou mot de passe incorrect"
- runFlow: reusableFlows/StopApp.yml # Stop App