appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: 'Respect de ta vie privée'
    file: 'reusableFlows/FirstLaunch.yml' # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- runFlow: reusableFlows/components/buttons/SimpleActionButtonConnect.yml
- tapOn:
    id: 'Entrée pour l’email'
- inputText: ${MAESTRO_INVALID_EMAIL}
- tapOn:
    id: 'Mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- tapOn: 'Se connecter'
- tapOn: 'Se connecter' # pour sortir de la saisie
- assertVisible: 'E-mail ou mot de passe incorrect'
- runFlow: reusableFlows/StopApp.yml # Stop App
