appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Mon profil'
- tapOn: 'Se connecter'

- assertVisible: 'Connecte-toi'
- tapOn: 'tonadresse@email.com'
- inputText: ${MAESTRO_VALID_EMAIL}
- tapOn: 'Ton mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- tapOn: 'Se connecter'
- tapOn: 'Se connecter'

- tapOn: 'Plus tard'