appId: ${MAESTRO_APP_ID}
---
- assertVisible: 'Mon profil'
- tapOn: 'Se connecter'

- assertVisible: 'Connecte-toi'
- tapOn: 'tonadresse@email.com'
- inputText: ${MAESTRO_UNREGISTERED_EMAIL}
- tapOn: 'Ton mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- hideKeyboard
- tapOn: 'Se connecter' # Android

- assertVisible: 'Prends 1 minute'
- tapOn: 'Plus tard'
