appId: ${MAESTRO_APP_ID}
---
- tapOn: 'Se connecter'

- tapOn: 'tonadresse@email.com'
- inputText: ${MAESTRO_VALID_EMAIL}
- tapOn: 'Ton mot de passe'
- inputRandomText:
    length: 10
- hideKeyboard
- tapOn: 'Se connecter' # Android

- assertVisible: "E-mail ou mot de passe incorrect"
- tapOn: "Revenir en arrière" # Permet de réinitialiser les forms