appId: ${MAESTRO_APP_ID}
---
- tapOn: 'Se connecter'

- tapOn: 'tonadresse@email.com'
- inputText: ${MAESTRO_VALID_EMAIL}
- tapOn: 'Ton mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- hideKeyboard
- tapOn: 'Se connecter' # Android

- runFlow: # Si apparition du QPI
    when:
      visible: 'Prends 1 minute'
    commands:
      - tapOn: 'Plus tard'

- runFlow: # Si apparition de la modale de partage
    when:
      visible: 'Partager l’appli'
    commands:
      - tapOn: 'Non merci'
