appId: ${MAESTRO_APP_ID}
---
- tapOn: 'Se connecter'

- assertVisible: 'Connecte-toi'
- tapOn:
    id: 'Afficher le mot de passe'
- tapOn: 'tonadresse@email.com'
- inputRandomEmail
- tapOn: 'Ton mot de passe'
- inputText: ${MAESTRO_PASSWORD}
- hideKeyboard
- tapOn: 'Se connecter' # Android

- assertVisible: 'E-mail ou mot de passe incorrect'
- tapOn: 'Revenir en arrière' # Permet de réinitialiser les forms
