appId: ${MAESTRO_APP_ID}
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow:
    when:
      visible: 'Respect de ta vie privée'
    file: 'reusableFlows/FirstLaunch.yml' # First Launch
- runFlow: reusableFlows/components/buttons/SimpleActionButtonMyProfile.yml
- runFlow: reusableFlows/components/buttons/SimpleActionButtonConnect.yml
- tapOn: "Mot de passe oublié\_?"
- assertVisible: "Mot de passe oublié\_?"
- tapOn: "Mot de passe oublié\_?"
- assertVisible: "Saisis ton adresse e-mail pour recevoir un lien qui te permettra de réinitialiser ton mot de passe\_!"
- assertVisible: 'Adresse e-mail'
- inputText: ${MAESTRO_VALID_EMAIL}
- tapOn: 'Valider'
- runFlow: reusableFlows/StopApp.yml # Stop App
