appId: ${MAESTRO_APP_ID}
---
#CguPage
- assertVisible: "CGU & Données"

- assertVisible: "Nos conditions générales d’utilisation"
- assertVisible: "La charte des données personnelles"

- assertVisible: "S’inscrire"

- tapOn: "S’inscrire"
