appId: app.passculture.staging
---
- runFlow: reusableFlows/LaunchApp.yml # Launch App
- runFlow: src/features/identityCheck/FirstLaunch.yml # First Launch

- tapOn: "Mes favoris"
- tapOn: "Créer un compte"
- assertVisible: "Crée-toi un compte"

- runFlow: reusableFlows/StopApp.yml # Stop App